--- a/screencaster.desktop
+++ b/screencaster.desktop
@@ -1,9 +1,10 @@
+
 [Desktop Entry]
-Type=Application
 Encoding=UTF-8
 Name=Screencaster
 Comment=Record on-screen video and sound from microphone
-Exec=/usr/bin/screencaster
-Icon=application.png
+Exec=screencaster
+Icon=screencaster
 Terminal=false
+Type=Application
 Categories=AudioVideo;
