--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -2,9 +2,19 @@ Package: screencaster-gtk
 Priority: optional
 Section: video
 Installed-Size: 
-Maintainer: Larry Reid <lcreid@jadesystems.ca>
+Maintainer: Larry Reid <larry.reid@jadesystems.ca>
 Architecture: all
-Version: 1.0-2
-Depends: libav-tools (>=0.8.6), libavcodec-extra-53, wmctrl, ruby1.9.1 (>=1.9.1), mkvtoolnix (>=5.1.0)
+Version: 1.0.0-2
+Depends: libav-tools (>=0.8.6),
+ libavcodec-extra-53, 
+ wmctrl, 
+ ruby1.9.1-dev (>=1.9.1), 
+ libglib2.0-dev, 
+ libgdk-pixbuf2.0-dev, 
+ libcairo2-dev, 
+ libatk1.0-dev, 
+ libpango1.0-dev,
+ libgtk2.0-dev,
+ mkvtoolnix (>=5.1.0)
 Description: Record screencasts
 
