--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -4,12 +4,13 @@ Section: video
 Installed-Size: 
 Maintainer: Larry Reid <larry.reid@jadesystems.ca>
 Architecture: all
-Version: 1.0.0-7
+Version: 1.0.0-8
 Depends: libav-tools (>=0.8.6),
  libavcodec-extra-53, 
  wmctrl, 
  ruby1.9.1-dev (>=1.9.1), 
  libgtk2.0-dev,
- mkvtoolnix (>=5.1.0)
+ mkvtoolnix (>=5.1.0),
+ gconf2 (>= 3.2.5)
 Description: Record screencasts
 
